app-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - unique.name.ng
    - api.unique.name.ng
    secretName: frontend-tls-secret
  rules:
    # Frontend
    - host: unique.name.ng
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend
              port:
                number: 80

    # Backend
    - host: api.unique.name.ng
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: backend    
              port:
                number: 3500
